--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ button{
     border-radius: 10px;
     border: none;
     padding: 10px;
-    width: 80%;
+    width: 60%;
 }
 @media(min-width:768px) and (max-width:1023px){
 
@@ -96,7 +96,7 @@ button{
    
     .area{
         margin-top: 20px;
-        height: 100vw;
+        height: 70vh;
         overflow: scroll;
         
     }
@@ -192,7 +192,7 @@ button{
    
     .area{
         margin-top: 20px;
-        height: 100vw;
+        height: 70vh;
         overflow: scroll;
         
     }
@@ -288,7 +288,7 @@ button{
    
     .area{
         margin-top: 20px;
-        height: 100vw;
+        height: 70vh;
         overflow: scroll;
         
     }
@@ -379,12 +379,12 @@ button{
         align-items: center;
         justify-content: center;
         color: var(--bg-color1);
-        gap: 30px;
+        gap: 10px;
     }
    
     .area{
         margin-top: 20px;
-        height: 100vw;
+        height: 70vh;
         overflow: scroll;
         
     }
@@ -475,12 +475,12 @@ button{
         align-items: center;
         justify-content: center;
         color: var(--bg-color1);
-        gap: 30px;
+        gap: 10px;
     }
    
     .area{
         margin-top: 20px;
-        height: 100vw;
+        height: 70vh;
         overflow: scroll;
         
     }
