--- a/style.css
+++ b/style.css
@@ -279,16 +279,15 @@
      }
 
      .menu_mobile {
-         box-sizing: border-box;
-         height: 90vh;
          background-color: var(--bg-color1);
-         display: none;
          flex-direction: column;
          align-items: center;
          gap: 30px;
          color: var(--bg-color3);
          padding: 15px;
-         position: relative;
+         grid-column: 1 / 4;
+         grid-row: 2 / 3;
+         transition: all 1s ease;
      }
 
      .menu_mobile ul li {
@@ -444,16 +443,15 @@
      }
 
      .menu_mobile {
-         box-sizing: border-box;
-         height: 90vh;
          background-color: var(--bg-color1);
-         display: none;
          flex-direction: column;
          align-items: center;
          gap: 30px;
          color: var(--bg-color3);
          padding: 15px;
-         position: relative;
+         grid-column: 1 / 4;
+         grid-row: 2 / 3;
+         transition: all 1s ease;
      }
 
      .menu_mobile ul li {
@@ -603,16 +601,15 @@
      }
 
      .menu_mobile {
-         box-sizing: border-box;
-         height: 90vh;
          background-color: var(--bg-color1);
-         display: none;
          flex-direction: column;
          align-items: center;
          gap: 30px;
          color: var(--bg-color3);
          padding: 15px;
-         position: relative;
+         grid-column: 1 / 4;
+         grid-row: 2 / 3;
+         transition: all 1s ease;
      }
 
      .menu_mobile ul li {
@@ -781,16 +778,15 @@
      }
 
      .menu_mobile {
-         box-sizing: border-box;
-         height: 90vh;
          background-color: var(--bg-color1);
-         display: none;
          flex-direction: column;
          align-items: center;
          gap: 30px;
          color: var(--bg-color3);
          padding: 15px;
-         position: relative;
+         grid-column: 1 / 4;
+         grid-row: 2 / 3;
+         transition: all 1s ease;
      }
 
      .menu_mobile ul li {
