--- a/css/stardescstyle.css
+++ b/css/stardescstyle.css
@@ -74,3 +74,31 @@ nav {
 .menu {
     width: 100%;
 }
+
+     .menu_mobile {
+         background-color: var(--bg-color1);
+         flex-direction: column;
+         align-items: center;
+         gap: 30px;
+         color: var(--bg-color3);
+         padding: 15px;
+         grid-column: 1 / 4;
+         grid-row: 2 / 3;
+         transition: all 1s ease;
+     }
+
+     .menu_mobile ul li {
+         font-size: 1, 5rem;
+         margin: 20px;
+         list-style: none;
+     }
+
+     .text_menu {
+         width: 100%;
+         text-align: center;
+     }
+
+     .text_menu h1 {
+         color: var(--bg-color2);
+         font-size: 2rem;
+     }
