--- a/css/stardescstyle.css
+++ b/css/stardescstyle.css
@@ -32,6 +32,11 @@
      padding: 10px;
      width: 60%;
  }
+
+     .button_cadastro {
+         text-align: center;
+         margin-top: 20px;
+     }
  .fm h1 {
          font-size: 1.7rem;
      }
