--- a/css/stardescstyle.css
+++ b/css/stardescstyle.css
@@ -112,6 +112,12 @@ nav {
         overflow: hidden;
         transition: all 1s ease;
     }
+    .text_stardescontos {
+        margin-top: 20px;
+        color: var(--bg-color1);
+        text-align: justify;
+        line-height: 23px;
+    }
 }
 @media (min-width:425px) and (max-width:767px){
     .fm h1 {
@@ -127,6 +133,12 @@ nav {
         height: 6vh;
         overflow: hidden;
         transition: all 1s ease;
+    }
+    .text_stardescontos {
+        margin-top: 20px;
+        color: var(--bg-color1);
+        text-align: justify;
+        line-height: 23px;
     }
 }
 @media (min-width:320px) and (max-width:424px){
@@ -144,6 +156,12 @@ nav {
         overflow: hidden;
         transition: all 1s ease;
     }
+    .text_stardescontos {
+        margin-top: 20px;
+        color: var(--bg-color1);
+        text-align: justify;
+        line-height: 23px;
+    }
 }
 @media (max-width:319px){
     .fm h1 {
@@ -159,5 +177,11 @@ nav {
         height: 6vh;
         overflow: hidden;
         transition: all 1s ease;
+    }
+    .text_stardescontos {
+        margin-top: 20px;
+        color: var(--bg-color1);
+        text-align: justify;
+        line-height: 23px;
     }
 }
