--- a/style.css
+++ b/style.css
@@ -165,7 +165,10 @@
          color: var(--bg-color1);
          gap: 30px;
      }
-
+     .filtro_aberto{
+        background-color: var(--bg-color2);
+        color: var(--bg-color1);
+         }
      .area {
          border: 1px solid var(--bg-color2);
          background-color: rgb(219, 218, 218);
