--- a/style.css
+++ b/style.css
@@ -166,6 +166,8 @@
          gap: 30px;
      }
      .filtro_aberto{
+        position: absolute;
+        z-index: 1;
         background-color: var(--bg-color2);
         color: var(--bg-color1);
          }
