--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,19 @@
          color: var(--bg-color1);
          gap: 30px;
      }
-
+     .filtro {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--bg-color1);
+        gap: 30px;
+    }
+    .filtro_aberto{
+       position: absolute;
+       z-index: 1;
+       background-color: var(--bg-color2);
+       color: var(--bg-color1);
+        }
      .area {
          border: 1px solid var(--bg-color2);
          background-color: rgb(219, 218, 218);
