--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@
         color: var(--bg-color1);
         gap: 30px;
     }
-    .filtro_aberto{
+    .filtro_area_aberto{
        position: absolute;
        z-index: 1;
        background-color: var(--bg-color2);
