--- a/css/style.css
+++ b/css/style.css
@@ -175,8 +175,10 @@
     .filtro_area_aberto{
        position: absolute;
        z-index: 1;
-       background-color: var(--bg-color2);
-       color: var(--bg-color1);
+       width: 80%;
+       height: 80%;
+       background-color: var(--bg-color3);
+       color: var(--bg-color2);
         }
      .area {
          border: 1px solid var(--bg-color2);
