--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@
      }
    
     .filtro_area_aberto{
-        display: grid;
+        display: none;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2fr);
         padding: 10px;
