--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,14 @@
          color: var(--bg-color1);
          gap: 30px;
      }
-   
+     .modal{
+        position: fixed;
+        top:0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.8);
+     }
     .filtro_area_aberto{
         display: none;
         grid-template-columns: 1fr;
