--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,7 @@
          gap: 30px;
      }
      .modal{
+        display: none;
         position: fixed;
         top:0;
         bottom: 0;
@@ -175,7 +176,7 @@
         background-color: rgba(0,0,0,0.8);
      }
     .filtro_area_aberto{
-        display: none;
+        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2fr);
         padding: 10px;
@@ -183,8 +184,8 @@
        z-index: 1;
        width: 80%;
        height: 80%;
-       background-color: var(--bg-color1);
-       color: var(--bg-color3);
+       background-color: var(--bg-color3);
+       color: var(--bg-color2);
         }
 
         .filtro_cidade,
