--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,8 @@
      }
      .modal{
         display: none;
+        align-items: center;
+        justify-content: center;
         position: fixed;
         top:0;
         bottom: 0;
