--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,10 @@
             grid-row: 2fr;
             padding: 10px;
         }
-     .area {
+        .filtro_estabelecimento,
+        .filtro_cidade{
+            display: flex;
+        }     .area {
          border: 1px solid var(--bg-color2);
          background-color: rgb(219, 218, 218);
          margin-top: 20px;
