--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@
  .fm h1 {
      font-size: 1.7rem;
  }
+ input,
+ label{
+    margin: 10px;
+ }
 
  @media(min-width:768px) and (max-width:1023px) {
 
@@ -200,7 +204,9 @@
         .filtro_estabelecimento,
         .filtro_cidade{
             display: flex;
-        }     .area {
+            padding: 10px;
+        }
+        .area {
          border: 1px solid var(--bg-color2);
          background-color: rgb(219, 218, 218);
          margin-top: 20px;
