--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
         width: 90vw;
         height: 85vh;
         background-color: var(--bg-color3);
