--- a/css/style.css
+++ b/css/style.css
@@ -254,17 +254,21 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        width: 90vw;
+        width: 40vw;
         height: 85vh;
         background-color: var(--bg-color3);
      }
      .area_content_return img{
         width: 45px;
      }
+     .area_contet_img {
+        width: 100%;
+     }
      .area_contet_img img {
         width: 100px;
      }
      .area_content_return{
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
