--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,8 @@
         width: 100%;
      }
      .area_contet_img img {
-        width: 100px;
+
+        object-fit: contain;
      }
      .area_content_return{
         width: 100%;
