--- a/css/style.css
+++ b/css/style.css
@@ -261,11 +261,11 @@
      .area_content_return img{
         width: 45px;
      }
-     .area_contet_img {
+     .area_content_img {
         width: 100%;
         text-align: center;
      }
-     .area_contet_img img {
+     .area_content_img img {
         width: 45%;
         object-fit: contain;
      }
@@ -274,7 +274,8 @@
      }
      .area_content_return{
         width: 100%;
-        display: flex;
+        display: grid;
+        grid-column: 100px 1fr;
         align-items: center;
         justify-content: center;
         background-color: var(--bg-color1);
