--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@
      .area_content_return{
         width: 100%;
         display: grid;
-        grid-column: 100px 1fr;
+        grid-template-columnsa: 100px 1fr;
         align-items: center;
         justify-content: center;
         background-color: var(--bg-color1);
