--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,37 @@
      .area_content_text{
         color:var(--bg-color1);
      }
+     .area_content_name{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+     }
+     .area_content_comunication{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+     }
+     .midia{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+     }
+     .phone{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+     }
+     .area_content_descont{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+     }
+     .content_endereço_body{
+        display: grid;
+        grid-template-columns: repeat(1fr);
+     }
      .sb {
          border-bottom: 0;
          margin-bottom: 0;
