--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@
          margin-left: 10px;
      }
      .modalc{
-        display: flex;
+        display: none;
         justify-content: center;
         align-items: center;
         flex-direction: column;
